@@ -1,6 +1,6 @@
 /*
  * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2023 SonarSource
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,7 +19,6 @@
  */
 package org.sonarlint.intellij.clion;
 
-import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.jetbrains.cidr.lang.CLanguageKind;
 import com.jetbrains.cidr.lang.CUDALanguageKind;
@@ -30,15 +29,15 @@ import com.jetbrains.cidr.lang.workspace.compiler.CompilerSpecificSwitchBuilder;
 import com.jetbrains.cidr.lang.workspace.compiler.OCCompiler;
 import com.jetbrains.cidr.lang.workspace.compiler.OCCompilerKind;
 import com.jetbrains.cidr.lang.workspace.compiler.TempFilesPool;
-
-import java.io.File;
-import java.util.List;
-import java.util.Map;
-
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.Test;
-import org.sonarsource.sonarlint.core.commons.Language;
+import org.sonarsource.sonarlint.core.client.api.common.Language;
+
+import java.io.File;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -69,10 +68,9 @@ class AnalyzerConfigurationTest {
     }
 
     @Override
-    public @NotNull OCCompiler getCompilerInstance(@NotNull Project project, @NotNull File file, @NotNull File file1, @NotNull CidrToolEnvironment cidrToolEnvironment, @NotNull TempFilesPool tempFilesPool) {
+    public @NotNull OCCompiler getCompilerInstance(@NotNull File file, @NotNull File file1, @NotNull CidrToolEnvironment cidrToolEnvironment, @NotNull TempFilesPool tempFilesPool) {
       return null;
     }
-
   };
 
   @Test
@@ -88,27 +86,27 @@ class AnalyzerConfigurationTest {
   void map_to_cfamily_compiler() {
     assertEquals("clang", AnalyzerConfiguration.mapToCFamilyCompiler(OCCompilerKind.CLANG));
     assertEquals("clang", AnalyzerConfiguration.mapToCFamilyCompiler(OCCompilerKind.GCC));
-    assertEquals("clang-cl", AnalyzerConfiguration.mapToCFamilyCompiler(OCCompilerKind.CLANG_CL));
+    assertNull(AnalyzerConfiguration.mapToCFamilyCompiler(OCCompilerKind.CLANG_CL));
     assertEquals("msvc-cl", AnalyzerConfiguration.mapToCFamilyCompiler(OCCompilerKind.MSVC));
     assertEquals("clang", AnalyzerConfiguration.mapToCFamilyCompiler(APPLE_CLANG_COMPILER));
   }
 
   @Test
   void configuration() {
-    var file = mock(VirtualFile.class);
-    var configuration = new AnalyzerConfiguration.Configuration(
+    VirtualFile file = mock(VirtualFile.class);
+    AnalyzerConfiguration.Configuration configuration = new AnalyzerConfiguration.Configuration(
       file,
       "compilerExecutable",
       "compilerWorkingDir",
-      List.of("s1", "s2"),
+      Arrays.asList("s1", "s2"),
       "compilerKind",
       Language.CPP,
-      Map.of("isHeaderFile", "true"));
+      Collections.singletonMap("isHeaderFile", "true"));
 
     assertEquals(file, configuration.virtualFile);
     assertEquals("compilerExecutable", configuration.compilerExecutable);
     assertEquals("compilerWorkingDir", configuration.compilerWorkingDir);
-    assertEquals(List.of("s1", "s2"), configuration.compilerSwitches);
+    assertEquals(Arrays.asList("s1", "s2"), configuration.compilerSwitches);
     assertEquals("compilerKind", configuration.compilerKind);
     assertEquals(Language.CPP, configuration.sonarLanguage);
     assertEquals("true", configuration.properties.get("isHeaderFile"));
@@ -116,15 +114,15 @@ class AnalyzerConfigurationTest {
 
   @Test
   void configuration_result() {
-    var configuration = new AnalyzerConfiguration.Configuration(
+    AnalyzerConfiguration.Configuration configuration = new AnalyzerConfiguration.Configuration(
       null,
       null,
       null,
       null,
       null,
       null,
-      Map.of("isHeaderFile", "false"));
-    var result = AnalyzerConfiguration.ConfigurationResult.of(configuration);
+      Collections.singletonMap("isHeaderFile", "false"));
+    AnalyzerConfiguration.ConfigurationResult result = AnalyzerConfiguration.ConfigurationResult.of(configuration);
     assertTrue(result.hasConfiguration());
     assertEquals(configuration, result.getConfiguration());
     assertThrows(UnsupportedOperationException.class, result::getSkipReason);
@@ -132,7 +130,7 @@ class AnalyzerConfigurationTest {
 
   @Test
   void configuration_result_skipped() {
-    var result = AnalyzerConfiguration.ConfigurationResult.skip("reason");
+    AnalyzerConfiguration.ConfigurationResult result = AnalyzerConfiguration.ConfigurationResult.skip("reason");
     assertFalse(result.hasConfiguration());
     assertEquals("reason", result.getSkipReason());
     assertThrows(UnsupportedOperationException.class, result::getConfiguration);
