@@ -1,6 +1,6 @@
 /*
  * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2023 SonarSource
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -20,11 +20,14 @@
 package org.sonarlint.intellij.clion;
 
 import com.intellij.mock.MockLocalFileSystem;
+import com.intellij.openapi.vfs.VirtualFile;
+
 import java.io.File;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
+
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -33,32 +36,32 @@ class BuildWrapperJsonGeneratorTest {
 
   @Test
   void empty() {
-    var json = new BuildWrapperJsonGenerator().build();
+    String json = new BuildWrapperJsonGenerator().build();
     assertEquals("{\"version\":0,\"captures\":[]}", json);
   }
 
   @Test
   void single() {
-    var fileSystem = new MockLocalFileSystem();
+    MockLocalFileSystem fileSystem = new MockLocalFileSystem();
 
-    var virtualFile = fileSystem.findFileByIoFile(new File("test.cpp"));
-    var compilerExecutable = new File("/path/to/compiler").getAbsoluteFile();
-    var compilerWorkingDir = new File("/path/to/compiler/working/dir").getAbsoluteFile();
+    VirtualFile virtualFile = fileSystem.findFileByIoFile(new File("test.cpp"));
+    File compilerExecutable = new File("/path/to/compiler").getAbsoluteFile();
+    File compilerWorkingDir = new File("/path/to/compiler/working/dir").getAbsoluteFile();
 
-    var properties = new TreeMap<String, String>();
+    Map<String, String> properties = new TreeMap<>();
     properties.put("prop1", "val1");
     properties.put("prop2", "\"val2\"");
     properties.put("propn", "valn");
 
-    var configuration = new AnalyzerConfiguration.Configuration(
+    AnalyzerConfiguration.Configuration configuration = new AnalyzerConfiguration.Configuration(
       virtualFile,
       compilerExecutable.toString(),
       compilerWorkingDir.toString(),
-      List.of("a1", "a2"),
+      Arrays.asList("a1", "a2"),
       "clang",
       null,
       properties);
-    var json = new BuildWrapperJsonGenerator()
+    String json = new BuildWrapperJsonGenerator()
       .add(configuration)
       .build();
     assertEquals(
@@ -69,56 +72,56 @@ class BuildWrapperJsonGeneratorTest {
         + quote(compilerExecutable)
         + ",\"properties\":{\"prop1\":\"val1\",\"prop2\":\"\\\"val2\\\"\",\"propn\":\"valn\"}"
         + ",\"cmd\":["
-        + quote(compilerExecutable) + ",\"" + virtualFile.getCanonicalPath() + "\",\"a1\",\"a2\"]}" +
+        + quote(compilerExecutable) + ",\"/test.cpp\",\"a1\",\"a2\"]}" +
         "]}",
       json);
   }
 
   @Test
   void multiple() {
-    var fileSystem = new MockLocalFileSystem();
+    MockLocalFileSystem fileSystem = new MockLocalFileSystem();
 
-    var virtualFile = fileSystem.findFileByIoFile(new File("test.cpp"));
-    var compilerExecutable = new File("/path/to/compiler").getAbsoluteFile();
-    var compilerWorkingDir = new File("/path/to/compiler/working/dir").getAbsoluteFile();
+    VirtualFile virtualFile = fileSystem.findFileByIoFile(new File("test.cpp"));
+    File compilerExecutable = new File("/path/to/compiler").getAbsoluteFile();
+    File compilerWorkingDir = new File("/path/to/compiler/working/dir").getAbsoluteFile();
 
-    var virtualFile2 = fileSystem.findFileByIoFile(new File("test2.cpp"));
-    var compilerExecutable2 = new File("/path/to/compiler2").getAbsoluteFile();
-    var compilerWorkingDir2 = new File("/path/to/compiler/working/dir2").getAbsoluteFile();
+    VirtualFile virtualFile2 = fileSystem.findFileByIoFile(new File("test2.cpp"));
+    File compilerExecutable2 = new File("/path/to/compiler2").getAbsoluteFile();
+    File compilerWorkingDir2 = new File("/path/to/compiler/working/dir2").getAbsoluteFile();
 
-    var virtualFile3 = fileSystem.findFileByIoFile(new File("test3.h"));
-    var compilerExecutable3 = new File("/path/to/compiler3").getAbsoluteFile();
-    var compilerWorkingDir3 = new File("/path/to/compiler/working/dir3").getAbsoluteFile();
+    VirtualFile virtualFile3 = fileSystem.findFileByIoFile(new File("test3.h"));
+    File compilerExecutable3 = new File("/path/to/compiler3").getAbsoluteFile();
+    File compilerWorkingDir3 = new File("/path/to/compiler/working/dir3").getAbsoluteFile();
 
-    var configuration1 = new AnalyzerConfiguration.Configuration(
+    AnalyzerConfiguration.Configuration configuration1 = new AnalyzerConfiguration.Configuration(
       virtualFile,
       compilerExecutable.toString(),
       compilerWorkingDir.toString(),
-      List.of("a1", "a2"),
+      Arrays.asList("a1", "a2"),
       "clang",
       null,
-      Map.of("isHeaderFile", "false"));
-    var properties2 = new TreeMap<String, String>();
+      Collections.singletonMap("isHeaderFile", "false"));
+    Map<String, String> properties2 = new TreeMap<>();
     properties2.put("prop1", "val1");
     properties2.put("prop2", "\"val2\"");
     properties2.put("propn", "valn");
-    var configuration2 = new AnalyzerConfiguration.Configuration(
+    AnalyzerConfiguration.Configuration configuration2 = new AnalyzerConfiguration.Configuration(
       virtualFile2,
       compilerExecutable2.toString(),
       compilerWorkingDir2.toString(),
-      List.of("b1", "b2"),
+      Arrays.asList("b1", "b2"),
       "clang",
       null,
       properties2);
-    var configuration3 = new AnalyzerConfiguration.Configuration(
+    AnalyzerConfiguration.Configuration configuration3 = new AnalyzerConfiguration.Configuration(
       virtualFile3,
       compilerExecutable3.toString(),
       compilerWorkingDir3.toString(),
-      List.of("c1", "c2"),
+      Arrays.asList("c1", "c2"),
       "clang",
       null,
       Collections.emptyMap());
-    var json = new BuildWrapperJsonGenerator()
+    String json = new BuildWrapperJsonGenerator()
       .add(configuration1)
       .add(configuration2)
       .add(configuration3)
@@ -131,7 +134,7 @@ class BuildWrapperJsonGeneratorTest {
         + quote(compilerExecutable)
         + ",\"properties\":{\"isHeaderFile\":\"false\"}"
         + ",\"cmd\":["
-        + quote(compilerExecutable) + ",\"" + virtualFile.getCanonicalPath() + "\",\"a1\",\"a2\"]}"
+        + quote(compilerExecutable) + ",\"/test.cpp\",\"a1\",\"a2\"]}"
         + ","
         + "{\"compiler\":\"clang\",\"cwd\":"
         + quote(compilerWorkingDir2)
@@ -139,7 +142,7 @@ class BuildWrapperJsonGeneratorTest {
         + quote(compilerExecutable2)
         + ",\"properties\":{\"prop1\":\"val1\",\"prop2\":\"\\\"val2\\\"\",\"propn\":\"valn\"}"
         + ",\"cmd\":["
-        + quote(compilerExecutable2) + ",\"" + virtualFile2.getCanonicalPath() + "\",\"b1\",\"b2\"]}"
+        + quote(compilerExecutable2) + ",\"/test2.cpp\",\"b1\",\"b2\"]}"
         + ","
         + "{\"compiler\":\"clang\",\"cwd\":"
         + quote(compilerWorkingDir3)
@@ -147,7 +150,7 @@ class BuildWrapperJsonGeneratorTest {
         + quote(compilerExecutable3)
         + ",\"properties\":{}"
         + ",\"cmd\":["
-        + quote(compilerExecutable3) + ",\"" + virtualFile3.getCanonicalPath() + "\",\"c1\",\"c2\"]}"
+        + quote(compilerExecutable3) + ",\"/test3.h\",\"c1\",\"c2\"]}"
         + "]}",
       json);
   }
