@@ -1,6 +1,6 @@
 /*
- * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2023 SonarSource
+ * CodeScan for IntelliJ IDEA
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,51 +19,54 @@
  */
 package org.sonarlint.intellij.core;
 
-import com.intellij.openapi.components.Service;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.serviceContainer.NonInjectable;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
 import org.jetbrains.annotations.NotNull;
 import org.sonarlint.intellij.common.ui.SonarLintConsole;
-import org.sonarlint.intellij.common.vcs.VcsService;
 import org.sonarlint.intellij.config.global.ServerConnection;
+import org.sonarlint.intellij.config.project.SonarLintProjectSettings;
 import org.sonarlint.intellij.exception.InvalidBindingException;
-import org.sonarlint.intellij.messages.ProjectBindingListenerKt;
+import org.sonarlint.intellij.messages.ProjectConfigurationListener;
+import org.sonarlint.intellij.messages.ProjectEngineListener;
 import org.sonarlint.intellij.notifications.SonarLintProjectNotifications;
 import org.sonarlint.intellij.tasks.BindingStorageUpdateTask;
 import org.sonarsource.sonarlint.core.client.api.common.SonarLintEngine;
 import org.sonarsource.sonarlint.core.client.api.connected.ConnectedSonarLintEngine;
+import org.sonarsource.sonarlint.core.util.StringUtils;
 
 import static java.util.Objects.requireNonNull;
 import static org.sonarlint.intellij.common.util.SonarLintUtils.getService;
-import static org.sonarlint.intellij.common.util.SonarLintUtils.isBlank;
 import static org.sonarlint.intellij.config.Settings.getGlobalSettings;
 import static org.sonarlint.intellij.config.Settings.getSettingsFor;
 
-@Service(Service.Level.PROJECT)
-public final class ProjectBindingManager {
+public class ProjectBindingManager {
   private final Project myProject;
+  private final Supplier<SonarLintEngineManager> engineManagerSupplier;
   private final ProgressManager progressManager;
 
   public ProjectBindingManager(Project project) {
-    this(project, ProgressManager.getInstance());
+    this(project, () -> getService(SonarLintEngineManager.class), ProgressManager.getInstance());
   }
 
   @NonInjectable
-  ProjectBindingManager(Project project, ProgressManager progressManager) {
+  ProjectBindingManager(Project project, Supplier<SonarLintEngineManager> engineManagerSupplier, ProgressManager progressManager) {
     this.myProject = project;
+    this.engineManagerSupplier = engineManagerSupplier;
     this.progressManager = progressManager;
   }
 
@@ -78,19 +81,19 @@ public final class ProjectBindingManager {
   }
 
   public SonarLintFacade getFacade(Module module, boolean logDetails) throws InvalidBindingException {
-    var engineManager = getService(EngineManager.class);
-    var projectSettings = getSettingsFor(myProject);
-    var notifications = getService(myProject, SonarLintProjectNotifications.class);
-    var console = getService(myProject, SonarLintConsole.class);
+    SonarLintEngineManager engineManager = this.engineManagerSupplier.get();
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
+    SonarLintProjectNotifications notifications = getService(myProject, SonarLintProjectNotifications.class);
+    SonarLintConsole console = getService(myProject, SonarLintConsole.class);
     if (projectSettings.isBindingEnabled()) {
-      var moduleBindingManager = getService(module, ModuleBindingManager.class);
-      var connectionId = projectSettings.getConnectionName();
-      var projectKey = moduleBindingManager.resolveProjectKey();
+      ModuleBindingManager moduleBindingManager = getService(module, ModuleBindingManager.class);
+      String connectionId = projectSettings.getConnectionName();
+      String projectKey = moduleBindingManager.resolveProjectKey();
       checkBindingStatus(notifications, connectionId, projectKey);
       if (logDetails) {
         console.info(String.format("Using connection '%s' for project '%s'", connectionId, projectKey));
       }
-      var engine = engineManager.getConnectedEngine(notifications, connectionId, projectKey);
+      ConnectedSonarLintEngine engine = engineManager.getConnectedEngine(notifications, connectionId, projectKey);
       return new ConnectedSonarLintFacade(engine, myProject, projectKey);
     }
 
@@ -98,30 +101,30 @@ public final class ProjectBindingManager {
   }
 
   private ConnectedSonarLintEngine getConnectedEngineSkipChecks() {
-    var engineManager = getService(EngineManager.class);
+    SonarLintEngineManager engineManager = this.engineManagerSupplier.get();
     return engineManager.getConnectedEngine(requireNonNull(getSettingsFor(myProject).getConnectionName()));
   }
 
   public ConnectedSonarLintEngine getConnectedEngine() throws InvalidBindingException {
-    var projectSettings = getSettingsFor(myProject);
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
     if (!projectSettings.isBindingEnabled()) {
-      throw new IllegalStateException("Project is not bound to a SonarQube project");
+      throw new IllegalStateException("Project is not bound to a CodeScan project");
     }
-    var notifications = getService(myProject, SonarLintProjectNotifications.class);
-    var connectionName = projectSettings.getConnectionName();
-    var projectKey = projectSettings.getProjectKey();
+    SonarLintProjectNotifications notifications = getService(myProject, SonarLintProjectNotifications.class);
+    String connectionName = projectSettings.getConnectionName();
+    String projectKey = projectSettings.getProjectKey();
     checkBindingStatus(notifications, connectionName, projectKey);
 
-    var engineManager = getService(EngineManager.class);
+    SonarLintEngineManager engineManager = this.engineManagerSupplier.get();
     return engineManager.getConnectedEngine(notifications, connectionName, projectKey);
   }
 
   @CheckForNull
   public SonarLintEngine getEngineIfStarted() {
-    var engineManager = getService(EngineManager.class);
-    var projectSettings = getSettingsFor(myProject);
+    SonarLintEngineManager engineManager = this.engineManagerSupplier.get();
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
     if (projectSettings.isBound()) {
-      var connectionId = projectSettings.getConnectionName();
+      String connectionId = projectSettings.getConnectionName();
       return engineManager.getConnectedEngineIfStarted(requireNonNull(connectionId));
     }
     return engineManager.getStandaloneEngineIfStarted();
@@ -131,7 +134,7 @@ public final class ProjectBindingManager {
     return getSettingsFor(myProject).isBound() && tryGetServerConnection().isPresent();
   }
 
-  public @CheckForNull ConnectedSonarLintEngine getValidConnectedEngine() {
+  public @Nullable ConnectedSonarLintEngine getValidConnectedEngine() {
     return isBindingValid() ? getConnectedEngineSkipChecks() : null;
   }
 
@@ -144,8 +147,8 @@ public final class ProjectBindingManager {
     if (!getSettingsFor(myProject).isBindingEnabled()) {
       return Optional.empty();
     }
-    var connectionName = getSettingsFor(myProject).getConnectionName();
-    var connections = getGlobalSettings().getServerConnections();
+    String connectionName = getSettingsFor(myProject).getConnectionName();
+    List<ServerConnection> connections = getGlobalSettings().getServerConnections();
 
     return connections.stream().filter(s -> s.getName().equals(connectionName)).findAny();
   }
@@ -155,51 +158,42 @@ public final class ProjectBindingManager {
       notifications.notifyConnectionIdInvalid();
       throw new InvalidBindingException("Project has an invalid binding");
     } else if (projectKey == null) {
-      notifications.notifyProjectStorageInvalid();
+      notifications.notifyModuleInvalid();
       throw new InvalidBindingException("Project has an invalid binding");
     }
   }
 
-  @CheckForNull
-  public ProjectBinding getBinding() {
-    if (isBindingValid()) {
-      var settings = getSettingsFor(myProject);
-      return new ProjectBinding(settings.getConnectionName(), settings.getProjectKey(), getModuleOverrides());
-    }
-    return null;
-  }
-
   public void bindTo(@NotNull ServerConnection connection, @NotNull String projectKey, Map<Module, String> moduleBindingsOverrides) {
-    var previousBinding = getBinding();
-
-    var projectSettings = getSettingsFor(myProject);
+    SonarLintEngine previousEngine = getEngineIfStarted();
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
     projectSettings.bindTo(connection, projectKey);
     moduleBindingsOverrides.forEach((module, overriddenProjectKey) -> getSettingsFor(module).setProjectKey(overriddenProjectKey));
-    var modulesToClearOverride = allModules().stream()
+
+    Stream<Module> modulesToClearOverride = allModules().stream()
       .filter(m -> !moduleBindingsOverrides.containsKey(m));
     unbind(modulesToClearOverride.collect(Collectors.toList()));
 
     SonarLintProjectNotifications.get(myProject).reset();
-    var newBinding = requireNonNull(getBinding());
-    if (!Objects.equals(previousBinding, newBinding)) {
-      myProject.getMessageBus().syncPublisher(ProjectBindingListenerKt.getPROJECT_BINDING_TOPIC()).bindingChanged(previousBinding, newBinding);
-      getService(BackendService.class).projectBound(myProject, newBinding);
-      var task = new BindingStorageUpdateTask(connection, myProject);
-      progressManager.run(task.asModal());
+    ConnectedSonarLintEngine newEngine = getConnectedEngineSkipChecks();
+    if (previousEngine != newEngine) {
+      myProject.getMessageBus().syncPublisher(ProjectEngineListener.TOPIC).engineChanged(previousEngine, newEngine);
     }
+    BindingStorageUpdateTask task = new BindingStorageUpdateTask(newEngine, connection, false, true, myProject);
+    progressManager.run(task.asModal());
+    myProject.getMessageBus().syncPublisher(ProjectConfigurationListener.TOPIC).changed(projectSettings);
   }
 
   public void unbind() {
-    var previousBinding = getBinding();
-
-    var projectSettings = getSettingsFor(myProject);
+    SonarLintEngine previousEngine = getEngineIfStarted();
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
     projectSettings.unbind();
     unbind(allModules());
-
     SonarLintProjectNotifications.get(myProject).reset();
-    if (previousBinding != null) {
-      myProject.getMessageBus().syncPublisher(ProjectBindingListenerKt.getPROJECT_BINDING_TOPIC()).bindingChanged(previousBinding, null);
-      getService(BackendService.class).projectUnbound(myProject);
+    ProjectConfigurationListener projectListener = myProject.getMessageBus().syncPublisher(ProjectConfigurationListener.TOPIC);
+    projectListener.changed(projectSettings);
+    SonarLintEngine standaloneEngine = getEngineIfStarted();
+    if (previousEngine != standaloneEngine) {
+      myProject.getMessageBus().syncPublisher(ProjectEngineListener.TOPIC).engineChanged(previousEngine, standaloneEngine);
     }
   }
 
@@ -208,7 +202,7 @@ public final class ProjectBindingManager {
   }
 
   private List<Module> allModules() {
-    return List.of(ModuleManager.getInstance(myProject).getModules());
+    return Arrays.asList(ModuleManager.getInstance(myProject).getModules());
   }
 
   public Map<Module, String> getModuleOverrides() {
@@ -218,71 +212,16 @@ public final class ProjectBindingManager {
   }
 
   public Set<String> getUniqueProjectKeys() {
-    var projectSettings = getSettingsFor(myProject);
+    SonarLintProjectSettings projectSettings = getSettingsFor(myProject);
     if (projectSettings.isBound()) {
       return getUniqueProjectKeysForModules(allModules());
     }
     return Collections.emptySet();
   }
 
-  public Set<ProjectKeyAndBranch> getUniqueProjectKeysAndBranchesPairs() {
-    var projectSettings = getSettingsFor(myProject);
-    if (projectSettings.isBound()) {
-      VcsService vcsService = getService(myProject, VcsService.class);
-      return allModules().stream().map(module -> {
-        ModuleBindingManager moduleBindingManager = getService(module, ModuleBindingManager.class);
-        var projectKey = moduleBindingManager.resolveProjectKey();
-        if (projectKey != null) {
-          var branchName = vcsService.getServerBranchName(module);
-          return new ProjectKeyAndBranch(projectKey, branchName);
-        }
-        return null;
-      })
-        .filter(Objects::nonNull)
-        .collect(Collectors.toSet());
-    }
-    return Set.of();
-  }
-
-  public static class ProjectKeyAndBranch {
-    private final String projectKey;
-    private final String branchName;
-
-    public ProjectKeyAndBranch(String projectKey, @Nullable String branchName) {
-      this.projectKey = projectKey;
-      this.branchName = branchName;
-    }
-
-    public String getProjectKey() {
-      return projectKey;
-    }
-
-    @CheckForNull
-    public String getBranchName() {
-      return branchName;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) {
-        return true;
-      }
-      if (o == null || getClass() != o.getClass()) {
-        return false;
-      }
-      ProjectKeyAndBranch that = (ProjectKeyAndBranch) o;
-      return projectKey.equals(that.projectKey) && Objects.equals(branchName, that.branchName);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(projectKey, branchName);
-    }
-  }
-
-  private static Set<String> getUniqueProjectKeysForModules(Collection<Module> modules) {
+  public Set<String> getUniqueProjectKeysForModules(Collection<Module> modules) {
     return modules.stream().map(module -> getService(module, ModuleBindingManager.class).resolveProjectKey())
-      .filter(projectKey -> !isBlank(projectKey))
+      .filter(projectKey -> !StringUtils.isBlank(projectKey))
       .collect(Collectors.toSet());
   }
 }
